# Multi-Modal-RAG

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  claude_code_prompt.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: architecture.mmd  demo_script.md  report.md  report_data.md  report_references.md
docs/demo_assets/: demo_queries.md  demo_transcript.md
docs/demo_assets/screenshots/: README.md
docs/demo_assets/transcript/: query_1.json  query_2.json  query_3.json
scripts/: capture_demo.py
src/: __init__.py  config.py
src/app/: chat.py  main.py  sidebar.py
src/eval/: metrics.py  report.py  run.py
src/generation/: __init__.py  cache.py  generator.py  prompts.py  schema.py
src/graph/: __init__.py  qa_graph.py
src/indexing/: __init__.py  build_all.py  text_index.py  vision_index.py
src/ingestion/: __init__.py  chunk.py  models.py  parse.py  render.py  run_all.py
src/retrieval/: __init__.py  hybrid.py  text_retriever.py  types.py  vision_retriever.py
tests/: __init__.py  conftest.py  test_data.py  test_eval_metrics.py  test_gemini_smoke.py  test_smoke.py
